--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -8,6 +8,9 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           npx playwright install-deps
