--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -11,9 +11,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          npx playwright install-deps
+      # - name: Install dependencies
+      #   run: |
+      #     npx playwright install-deps
 
       - name: Setup
         run: |
