--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "playwright-chromium": "^1.18.1"
   },
   "scripts": {
