--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -10,6 +10,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+          cache: "yarn"
+
       - name: Setup
         run: |
           yarn install
